--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<h1>Mi Portfolio</h1>
-
 <!doctype html>
 <html lang="es">
   <head>
@@ -11,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <!--Estilo CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
 
     
@@ -28,7 +26,7 @@
 
     <!--Logo Argentina Programa-->
       <a class="navbar-brand" href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa" target="_blank" rel="noopener noreferrer">
-        <img class="logotipo" src="/Imagenes/Arg Programa 150px.png" alt="Logo Arg Prog">
+        <img class="logotipo" src="/Imagenes/Logo Arg Prog.png" alt="Logo Arg Prog">
       </a>
 
     <!--Categorias de Botones-->
@@ -62,7 +60,7 @@
       <!--Iconos Redes Sociales-->
         <ul class="navbar-nav flex-row flex-wrap text-center">
           <li class="nav-item col-4 col-lg-auto" id="iconos-barra">
-            <a class="nav-link" href="https://www.linkedin.com/in/vanesa-huarte/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+            <a class="nav-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
           </li>
           <li class="nav-item col-4 col-lg-auto">
             <a class="nav-link" href="https://github.com/vaneh14" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
@@ -149,8 +147,8 @@
     <div class="row align-items-center">
       <div class="col-lg-7">
         <h2 class="section-title">Sobre <span>mí</span></h2>
-        <p>Me llamo <strong>Vanesa</strong>, soy Arquitecta recibida de la FADU, UBA.</p>
-        <p>Siempre me interesó el mundo de la informática y actualmente me encuentro cursando la segunda parte de <strong>Argentina Programa #Yo Programo</strong>.</p>
+        <p>Me llamo <strong>Vanesa</strong>.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem architecto iste doloribus perferendis unde laborum. Beatae ipsum <strong>maiores voluptatibus et alias</strong>.</p>
       
         <!--Boton Contacto-->
         <a href="mailto:vanehuarte@gmail.com">
@@ -163,7 +161,7 @@
 
       <!--Imagen de Perfil-->
       <div class="col-lg-5 text-center">
-        <img class="imgperfil" src="/Imagenes/vane.png" alt="Foto de perfil">
+        <img class="imgperfil" src="/Imagenes/Img Perfil.png" alt="Foto de perfil">
       </div>
     </div>
   </div> <!--Cierre Container-->
