--- a/PortfolioAngular/src/index.html
+++ b/PortfolioAngular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Web</title>
+  <title>Vanesa Huarte | Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./assets/img/logo_portfolio.png">
